MORE TODO'S DONE!

--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -22,7 +22,7 @@ In SCM, a product's life cycle can be roughly divided into the many phases the p
 \item \textbf{Speed of delivery}
 The effects of the evolution of SCM throughout the last century are visible to everyone. Products are bought and shipped from one side of the globe to the other in a matter of weeks or sometimes even days. Whether this is fast enough or not is a question that can not be entirely answered in one collective voice. 
 
-One thing is certain: the world around us moves quickly, and in the freneticism and frenzy of our lives, sometimes weeks or days aren't enough. \todo{fcorreia: afirmações absolutas são quase sempre contra-argumentáveis...  :-)} \textbf{The faster the products arrive to their customer, the faster the customer can satisfy their needs.} \todo{concordancia pural singular: "customer" vs "their"} This holds true not only for the final customer of a product, but also for any enterprise that provides products and services to other enterprises, be it in the role of supplier, manufacturers, distributors or retailers. \todo{fcorreia: não será melhor chamar-lhe antes "buyer" em vez de "customer", acho que dá menos a entender que te possas estar a referir ao cliente final}
+The world around us moves quickly, and in the freneticism and frenzy of our lives, it might happen that sometimes weeks or days aren't enough. \todo{fcorreia: afirmações absolutas são quase sempre contra-argumentáveis...  :-)} \textbf{The faster the products arrive to their customer, the faster the customer can satisfy their needs.} \todo{concordancia pural singular: "customer" vs "their"} This holds true not only for the final customer of a product, but also for any enterprise that provides products and services to other enterprises, be it in the role of supplier, manufacturers, distributors or retailers. \todo{fcorreia: não será melhor chamar-lhe antes "buyer" em vez de "customer", acho que dá menos a entender que te possas estar a referir ao cliente final}
 
 \item \textbf{Synchronization}
 %Synchronization - specify why it is important
@@ -37,11 +37,7 @@ The real problem occurs when the companies have no common ground and the data is
 
 \item \textbf{Tracking}
 %Tracking - specify why it is important
-During a product's lifetime, a lot of alterations occur, and sometimes, the records about the origins of the products are lost, falsified, or flat out not registered. This leads to unreliability in the goods the consumers use everyday, and sometimes even to safety hazards. Often, the products are not what they were originally meant to be, or do not comply with quality standards.
-
-\todo{fcorreia: não tanto nos goods, mais na informação sobre eles, certo? ou a ideia principal nessa frase é que isto tem reprecursões nos proprios artigos?}
-
-\todo{fcorreia: não me é obvio de que forma é que podem surgir daqui safety hazards, nem de que forma eles "are not what they were originally meant to be". Tens referências para aqui?}
+During a product's lifetime, a lot of alterations occur and, sometimes, the records about the origins of the products are lost, falsified, or flat out not kept in a registry. This leads to unreliability in the goods the consumers use everyday and it may happen that some products are falsified and not the real product they were advertised to be. Additionaly, it can also happen that the products, not being properly tracked, do not hold up to the conditions or quality standards that are required by the regulatory entities. This can sometimes even lead to safety hazards. If a product is subject to hazardous conditions during any part of its lifecycle, it may become dangerous to be used or consumed.
 
 For this reason, it is of the utmost importance that the products are tracked since their origin, right up until the delivery to the final customer, as well as the conditions they are shipped in and the transformations they suffer.
 
@@ -88,9 +84,9 @@ Thus, the questions that need to be answered first, in order to reach a conclusi
 \item \textbf{Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?}
 \end{enumerate}
 
-These questions are sequential, meaning that, in order to answer one of them, we have to answer the previous question. Only in the end can we reach a definitive conclusion, though the sub-conclusions are also interesting to analyze and a contribute themselves to this area.
+These questions are sequential, meaning that, in theory, in order to answer one of them, we have to answer the previous question. But in practice, it is not always practical to follow this sequence, and a question might serve as a guide to start working on the following one. Therefore, the questions can be worked on iteratively. For instance, having some answers to the survey might allow work on the architecture and prototype to start, and, as more answers are collected, the more the requirements for the prototype are refined.
 
-\todo{fcorreia: sim e não. idealmente sim, mas na prática, não era exequível ficar à espera da resposta a uma para responder à seguinte, nem foi isso que fizeste no teu trabalho. O que podes dizer é que as respostas a cada uma destas perguntas informam a resposta às perguntas seguintes, e que na prática isto pode ser feito de forma iterativa.}
+In the end, all the questions end up being answered and it is possible to reach a definitive conclusion towards the thesis statement. The sub-conclusions are also interesting to analyze and are a contribute themselves to this area.
 
 \section{Approach}
 % What if no possibility works or we can't ascertain the main possibility? Check other ones!
@@ -133,11 +129,9 @@ In conclusion, the goal of the survey is to validate some assumptions and direct
 \subsection{Research Validation - Design and Implementation of a Prototype}
 % The prototype will serve to support "...", along with the requirements that were written based on the background research and literature review; (do i have to rewrite part of the requirements?) 
 
-%TODO: should the verbs be in the past, present or future here?
-Having answered the question about which are the most important aspects of supply chain to focus on improving, this section is focused on applying this knowledge to answer the other two final questions: \textbf{\textit{"What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?"}} and 
+This section is focused on applying the knowledge of which are the most important aspects of supply chain to focus on improving, to answer the other two final questions: \textbf{\textit{"What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?"}} and 
 \textbf{\textit{"Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?"}}
 
-\todo{fcorreia: eu evitaria o "Having answered ...", porque isto se faz normalmente de forma mais iterativa e até porque na realidade a coisa não aconteceu de forma assim tão sequêncial como a frase dá a entender. A frase pode comçar diretamente com "this section is focused on applying the knowledge of which are the most important aspects ...."}
 
 The state of the art review documented in Chapters~\ref{chap:blockchain} and~\ref{chap:blockchain-applicability} already provided some information towards the answer to the first of these questions, through the comparison of frameworks. Therefore, and taking the results of the survey into account, a brief analysis is undertaken to make a decision.
 
