--- a/references.bib
+++ b/references.bib
@@ -571,3 +571,16 @@ url = {https://hyperledger.github.io/composer/latest/introduction/introduction.h
 urldate = {2018-05-20},
 year = {2018}
 }
+
+@ARTICLE{720574, 
+author={}, 
+journal={IEEE Std 830-1998}, 
+title={IEEE Recommended Practice for Software Requirements Specifications}, 
+year={1998}, 
+volume={}, 
+number={}, 
+pages={1-40}, 
+keywords={formal specification;IEEE Std 830-1998;IEEE recommended practice;IEEE/EIA Std 12207.1-1997;commercial software product selection;contracts;customers;guidelines;in-house software product selection;prototyping;software development;software requirements specification;standards compliance;suppliers;system requirements specifications;Software requirements and specifications;contract;customer;prototyping;software requirements specification;supplier;system requirements specifications}, 
+doi={10.1109/IEEESTD.1998.88286}, 
+ISSN={}, 
+month={Oct},}
