--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -4,6 +4,7 @@ The survey was written during the months of March and April, 2018, with results 
 
 However, due to various factors, the survey and collection of results was delayed from the initial planning, resulting in the collection of results only being completed in June. Thus, the PoC used some assumptions from both the background analysis and the few initial answers from the survey, and kept iterating the requirements based on the new answers received during the development. 
 
+
 \section{Purpose and Target}
 Even though the survey was delayed, the answers given are still important in the end. The main purpose of this survey, as stated in~\ref{sec:survey-approach}, was to give a response to the question we are focusing on: \textbf{"What supply chain issues, improvements and requirements do the experts really find the most important?"}. 
 
@@ -28,33 +29,30 @@ The collected sample size was 25. Even though these are answers from knowledgeab
 
 The questions of the survey can be roughly grouped into four main groups of questions. Each of the groups has similar questions, with a distinct purpose.
   
-\todo{na enumeração em baixo, eu evitaria a palavra "group". em investigação empírica (que por vezes usa surveys) a  palavra group é muito frequentemente usada para se referir a grupos de pessoas. Aqui, e vez de "Statistical group 1 (4 questions) - General Information", por exemplo, eu escreveria apenas "General Information (4 questions)"}.
-
 \begin{enumerate}
 
 \item \textbf{Question Group 1 - General Information}
 	\begin{itemize}
 	\item \textbf{Questions} - Information about the respondent's contact with supply chain, role in the industry, years of experience and number of employees in the current company (if in a job related to supply chain).
-    \item \textbf{Conclusions Expected} - Characterization of the respondent's, especially in order to validate the relevance of their profiles.
-    \todo{fcorreia: estes "conclusions expected" são mais "goals", certo?}
+    \item \textbf{Goals} - Characterization of the respondent's, especially in order to validate the relevance of their profiles.
 	\end{itemize}
     
 \item \textbf{Question Group 2 - Blockchain Knowledge and Opinions}
 	\begin{itemize}
 	\item \textbf{Questions} - Questions about the general knowledge of Blockchain technology, opinions about Blockchain cryptocurrencies and their usefulness in various contexts, as well as Blockchain regulation and the effect of GDPR on Blockchain technology.
-    \item \textbf{Conclusions Expected} - Get a vision on the need or not of cryptocurrencies for Blockchain related architectures, as well as the impact of regulations on this technology.
+    \item \textbf{Goals} - Get a vision on the need or not of cryptocurrencies for Blockchain related architectures, as well as the impact of regulations on this technology.
 	\end{itemize}
     
 \item \textbf{Question Group 3 - Supply chain Points of Focus and Problems}
 	\begin{itemize}
     \item \textbf{Questions} - Questions to rate affirmations that deal with supply chain issues, focusing on the level of agreement that the participants have with the affirmations. Most of the affirmations correlate supply chain major issues with the points of failure that might underlie them; The others rate specific problems in an importance scale or by percentage of occurrence.
-    \item \textbf{Conclusions Expected} - Validation of the issues that affect the supply chain management metrics the most, as per the opinion of specialists.
+    \item \textbf{Goals} - Validation of the issues that affect the supply chain management metrics the most, as per the opinion of specialists.
 	\end{itemize}
     
 \item \textbf{Question Group 4 - Supply Chain Points of Improvement and Applicability of Blockchain Technology} 
 	\begin{itemize}
     \item \textbf{Questions} - The first half of these questions serves to prioritize the importance of some supply chain issues, as well as the importance of some functionalities that supply chain information systems should feature. The second half of the questions ranks the use cases and benefits that Blockchain could bring to supply chain management.
-    \item \textbf{Conclusions Expected} - This is the main point of the survey, and from here, the most important information towards the conclusions we want from the survey is gathered, which consists in the supply chain issues leading to Blockchain system requirements.
+    \item \textbf{Goals} - This is the main point of the survey, and from here, the most important information towards the conclusions we want from the survey is gathered, which consists in the supply chain issues leading to Blockchain system requirements.
 	\end{itemize}
     
 \end{enumerate}
@@ -74,12 +72,8 @@ The questions of the survey can be roughly grouped into four main groups of ques
  
 The analysis of the answers is done through bar graphs and using mostly the \textbf{measures of central tendency or location},  \textbf{measures of central spread, scale or dispersion} and \textbf{measures of skewness and kurtosis}. The metrics used to analyze the data set and reach some conclusions, as well as the way they are interpreted in this study are detailed in Table~\ref{metrics-table}.
 
-
-\todo{fcorreia: acho vale a pena explicares estes conceitos da estatística. podes dizer que vais calcular estes valores para a tua análise e podes simplesmente usar os conceitos assumindo que toda a gente sabe o que significam. se tiveres boas referências, fica sempre bem adicionar algumas. o verdadeiramente importante são as conclusões que vais tirar com base nestes valores, e aí pode valer a pena dar a entender mais algum conceito estatístico que seja importante para se perceber o raciocinio, mas sempre sem entrar neste tipo de detalhe.
-}
 %% PUT THESE INTO A TABLE AND EXPLAIN A LITTLE BETTER WHICH ONES ARE USED, WHEN AND WHY
 
-% TODO: change table caption and fix table format 
 
 %%%%%%%%%%%% TABLE START%%%%%%%%%%%%%%
 
