--- a/thesis.tex
+++ b/thesis.tex
@@ -132,7 +132,7 @@
 	\todo{pedro: abstract precisa de ser revisto de maneira a sumariar bem todo o conteúdo da tese}
 
 	%\subsection*{2. Naming Conventions and Definitions}
-	%glossary ->    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
+	%glossary + abreviations    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
 
 	%	\par PoC - Proof of Concept
 	%	\par SLA - Service Level Agreement
